--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,9 @@ cfscrape
 chardet==3.0.4
 cheroot>=6.3.3
 click
-click==6.7
 clr>=1.0.3
 codecov==2.0.15
 colorama
-colorama>=0.3.9
 cryptography==2.6.1
 django
 dlib
@@ -20,15 +18,12 @@ ee/util
 emailprotectionslib>=0.8.2
 facebook-sdk
 face_recognition
-Flask==0.12.2
-flask>=1.0
 Flask==1.0.2
 ftplib
 GitPython==2.1.1
 idna==2.8
 -i https://pypi.python.org/simple
 impacket
-impacket>=0.9.0
 importlib==1.0.4
 ipdb
 ipython
@@ -41,16 +36,14 @@ matplotlib
 netifaces
 pexpect
 PIL
-pillow==5.0.0
+pillow
 pprint
 progressbar
 psutil>=5.4.3
 pyasn1
-pyasn1>=0.2.3
 pycparser==2.19
 pycrypto
 pycryptodomex
-pyOpenSSL>=0.16.2
 pyopenssl==19.0.0
 pytesseract
 pytest-cov==2.5.1
@@ -58,9 +51,7 @@ python-docx
 pytube
 pyvirtualdisplay
 qrcode
-requests>=1.0.0
 requests==2.13.0
-requests==2.21.0
 rjsmin
 scikit-image
 scikit-learn
@@ -72,7 +63,6 @@ six==1.12.0
 slackclient
 tabulate>=0.8.1
 termcolor==1.1.0
-termcolor>=1.1.0
 terminaltables
 texttable==0.8.7
 tldextract
@@ -81,6 +71,5 @@ truffleHogRegexes==0.0.4
 unittest2==1.1.0
 urllib2
 urllib3
-urllib3==1.24.1
 Werkzeug==0.14.1
 wsgidav>=2.4.1
